# graphics_math

benchmark/: CMakeLists.txt  conanfile.txt  main.cpp  naive_implementation.hpp  sse2_implementation.hpp
benchmark/naive/: mat4.hpp  vec4.hpp
include/graphics_math/: detail.hpp  graphics_math.hpp  mat4.hpp  vec4.hpp
test/: main.cpp
test/mat4f/: CMakeLists.txt  consume_conan_dependencies.sh  main.cpp
test/vec4f/: conanfile.txt  consume_conan_dependencies.sh  main.cpp
